Add `gigahost_ssh_key` resource
